# adobe

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  pdf.rs
src/pdf/: request.rs
src/pdf/request/: assets.rs  operations.rs  token.rs
src/pdf/request/assets/: get_upload_presigned_uri.rs
src/pdf/request/operations/: extract.rs  extract_poll.rs  ocr.rs  ocr_poll.rs
