[package]
name = "adobe"
version = "0.0.0"
authors = ["Leo Borai <estebanborai@gmail.com>"]
edition = "2024"
categories = ["web-programming"]
description = "Adobe Document Services API client for Rust"
documentation = "https://docs.rs/adobe"
keywords = ["adobe", "http", "pdf", "ocr", "client"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeoBorai/adobe"
readme = "README.md"

[dependencies]
anyhow = "1"
bytes = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
